<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">datepicker</string>
    <string name="action_settings">Settings</string>
    <string name="separador_data">/</string>
    <string name="botao_1">1</string>
    <string name="botao_2">2</string>
    <string name="botao_3">3</string>
    <string name="botao_menos_1m">-1m</string>
    <string name="botao_4">4</string>
    <string name="botao_5">5</string>
    <string name="botao_6">6</string>
    <string name="botao_mais_1m">+1m</string>
    <string name="botao_7">7</string>
    <string name="botao_8">8</string>
    <string name="botao_9">9</string>
    <string name="botao_menos_1a">-1a</string>
    <string name="botao_menos_1d">-1d</string>
    <string name="botao_0">0</string>
    <string name="botao_mais_1d">+1d</string>
    <string name="botao_mais_1a">+1a</string>
    <string name="botao_ok">OK</string>
    <string name="botao_15">15</string>
    <string name="botao_30">30</string>
    <string name="botao_45">45</string>
    <string name="botao_00">00</string>
    <string name="botao_menos_1h">-1h</string>
    <string name="botao_mais_1h">+1h</string>
    <string name="title_activity_date">Data</string>
    <string name="title_activity_time">Hora</string>
    <string name="separador_hora">:</string>
    <string name="title_activity_number">Número</string>
    <string name="title_activity_full_number">FullNumberActivity</string>
    <string name="arroba">\@</string>
    <string name="del">Del</string>
    <string name="interrogacao">\?</string>
    <string name="barra_divisao">/</string>
    <string name="multiplicacao">*</string>
    <string name="mais_menos">+-</string>
    <string name="parentese_esquerdo">(</string>
    <string name="parentese_direito">)</string>
    <string name="porcento">%</string>
    <string name="dois_pontos">:</string>
    <string name="ponto_virgula">;</string>
    <string name="dolar">$</string>
    <string name="exclamacao">!</string>
    <string name="menos">-</string>
    <string name="virgula">,</string>
    <string name="ponto">.</string>
    <string name="mais">+</string>
    <string name="space"></string>
    <string name="igual">=</string>
    <string name="ok">OK</string>
    <string name="cerquilha">#</string>
    <string name="title_activity_compact_number">NUMCOMP</string>
    <string name="title_activity_special_number">SpecialNumberActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="less_than_minus">&lt;-</string>
    <string name="minus_greather_than">-&gt;</string>
    
    <string name="botao_1e">1 !</string>
    <string name="botao_2a">2 @</string>
    <string name="botao_3c">3 #</string>
    <string name="botao_4d">4 $</string>
    <string name="botao_5p">5 %</string>
    <string name="botao_6e">6 ^</string>
    <string name="botao_7e">7 &amp;</string>
    <string name="botao_8a">8 *</string>
    <string name="botao_9p">9 (</string>
    <string name="botao_0p">0 )</string>
    <string name="botao_comma_less_than">, &lt;</string>
    <string name="botao_period_greater_than">. &gt;</string>
    <string name="left_square_curly_braces">[ {</string>
    <string name="right_square_curly_braces">] }</string>
    <string name="botao_div_question">/ ?</string>
    <string name="botao_semi_colon">; :</string>
    <string name="botao_equal_plus">= +</string>
    <string name="botao_minus_underscore">- _</string>
    <string name="backspace">backspace</string>
</resources>
