<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FullNumberActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/numbers"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|right"
            android:inputType="text"
            android:maxLines="1"
            android:cursorVisible="true"
            android:scrollHorizontally="true" >
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="45dp" >

        <Button
            android:id="@+id/button_del"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/round_red"
            android:text="@string/del" 
			android:onClick="onClickDel" />

        <Button
            android:id="@+id/button_left_arrow"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/round_blue"
            android:layout_weight="1"
            android:text="@string/less_than_minus" 
			android:onClick="onClick_leftArrow" />

        <Button
            android:id="@+id/button_right_arrow"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/round_blue"
            android:layout_weight="1"
            android:text="@string/minus_greather_than" 
			android:onClick="onClick_rightArrow" />

        <ImageButton
            android:id="@+id/button_backspace"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClickBackspace"
	        android:src="@drawable/ic_input_delete" 
	        
	        android:contentDescription="@string/backspace"/>
        
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="45dp" >

        <!--             android:background="#8b6754" -->

        <!--  android:background="#f3ffac" -->
        
        <Button
            android:id="@+id/button_1e"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_1e" 
            android:longClickable="true"
			android:onClick="onClick1e" />

        <Button
            android:id="@+id/button_2a"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_2a"
            android:longClickable="true" 
			android:onClick="onClick2a" />

        <Button
            android:id="@+id/button_3c"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_3c"
            android:longClickable="true" 
			android:onClick="onClick3c" />

        <Button
            android:id="@+id/button_left_square_curly_braces"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textColor="#13a8b4" 
            android:text="@string/left_square_curly_braces"
            android:longClickable="true"
			android:onClick="onClickLeftSquareCurlyBraces" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="45dp" >

        <Button
            android:id="@+id/button_4d"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_4d"
            android:longClickable="true" 
			android:onClick="onClick4d" />

        <Button
            android:id="@+id/button_5p"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_5p"
            android:longClickable="true" 
			android:onClick="onClick5p" />

        <Button
            android:id="@+id/button_6e"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_6e"
            android:longClickable="true" 
			android:onClick="onClick6e" />

        <Button
            android:id="@+id/button_right_square_curly_braces"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/right_square_curly_braces"
            android:textColor="#68a8ff"
            android:longClickable="true" 
			android:onClick="onClickRightSquareCurlyBraces" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="45dp" >

        <Button
            android:id="@+id/button_7e"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_7e"
            android:longClickable="true" 
			android:onClick="onClick7e" />

        <Button
            android:id="@+id/button_8a"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_8a"
            android:longClickable="true" 
			android:onClick="onClick8a" />

        <Button
            android:id="@+id/button_9p"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_9p"
            android:longClickable="true" 
			android:onClick="onClick9p" />

        <Button
            android:id="@+id/button_div_question"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/botao_div_question"
            android:textColor="#b75fff"
            android:longClickable="true" 
			android:onClick="onClickDivQuestion" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="45dp" >

        <Button
            android:id="@+id/button_comma_less_than"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClickCommaLessThan"
            android:text="@string/botao_comma_less_than"
            android:longClickable="true"
            android:textColor="#fc00c6" />

        <Button
            android:id="@+id/button_0p"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClick0p"
            android:longClickable="true"
            android:text="@string/botao_0p" />

        <Button
            android:id="@+id/button_period_greater_than"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClickPeriodGreaterThan"
            android:text="@string/botao_period_greater_than"
            android:textColor="#0000ff"
            android:longClickable="true"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_semi_colon"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClickSemiColon"
            android:text="@string/botao_semi_colon"
            android:textColor="#1db100"
            android:textSize="18sp"
            android:longClickable="true"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="45dp" >
        
        <Button
            android:id="@+id/button_minus_underscore"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClickMinusUnderscore"
            android:text="@string/botao_minus_underscore"
            android:longClickable="true"
            android:textColor="#ff7800" />

        <Button
            android:id="@+id/button_space"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:background="@drawable/black_underline"
            android:onClick="onClickSpace"
            android:layout_weight="2"
            android:text="@string/space" />

        <Button
            android:id="@+id/button_equal_plus"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:onClick="onClickEqualPlus"
            android:text="@string/botao_equal_plus"
            android:longClickable="true"
            android:textColor="#ff0c00" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow8"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/button_ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="@string/ok" 
			android:onClick="onClickOk" />
			<requestFocus />
    </TableRow>


</TableLayout>
