<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:background="@drawable/search"
                android:inputType="number" >
                <requestFocus />
            </EditText>

            

            <EditText
                android:id="@+id/editText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

                    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

                    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separador_data"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
            
            <EditText
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_1" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_2" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_3" />

            <android.support.v7.widget.Space
                android:id="@+id/space1"
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#fffb00"
                android:text="@string/botao_menos_1m" />
            
            
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_4" />

            <Button
                android:id="@+id/button6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_5" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_6" />

            <android.support.v7.widget.Space
            android:id="@+id/space2"
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
            
            <Button
                android:id="@+id/button8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#fffb00"
                android:text="@string/botao_mais_1m" />
            
            
            
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_7" />

            <Button
                android:id="@+id/button10"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_8" />

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_9" />

        <android.support.v7.widget.Space
            android:id="@+id/space3"
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
            
            
            <Button
                android:id="@+id/button12"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#38b90a"
                android:text="@string/botao_menos_1a" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#0092ff"
                android:text="@string/botao_menos_1d" />

            <Button
                android:id="@+id/button14"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/botao_0" />

            <Button
                android:id="@+id/button15"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#0092ff"
                android:text="@string/botao_mais_1d" />

            
                    <android.support.v7.widget.Space
            android:id="@+id/space4"
            android:layout_width="10dp"
            android:layout_height="wrap_content" />
            
            
            
            <Button
                android:id="@+id/button16"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="#38b90a"
                android:text="@string/botao_mais_1a" />

        </LinearLayout>

        <Button
            android:id="@+id/button17"
            style="?android:attr/buttonStyleSmall"
            android:top="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botao_ok" />


    </LinearLayout>

</RelativeLayout>